# mega-Protocol-v29.1-ELITE

./: LICENSE.txt  OMEGA_PROTOCOL_GRANT_MASTER.md  OMEGA_PROTOCOL_MASTER_GRANT_v3.2.md  pytest.ini
configs/: __init__.py  config.py
docs/: UNIFIED_MEMORY_ARCHITECTURE.md
docs/audit/: LICENSE.txt  LICENSE_PROPRIETARY.txt  README.md  disruption_analysis.json  short_audit.py  sovereignty_disruption_audit.json  ultra_rigorous_audit.py
docs/business/: LINKEDIN_PROFILE_DRAFT.md
docs/research/: 3D Tensor-based Deep Learning Models for Predicting.docx  A validated forecasting model for optimizing dispatch schedules of PV - battery system in grid-connected apartment buildings.docx  Violation of Bell Inequality with Unentangled Photons.docx  agent_zero_tools.docx  agentic insights.docx  instruction chat.docx  kernel.docx  machine_learning_glossary.docx  software to learn from.docx
docs/theory/: GEMINI.md  INFORMATIONAL_SUBSTRATE_COSMOS.md  OMEGA_PROTOCOL_v3.1_ULTIMATE.md  README.md  THEORY_OF_EVERYTHING.md  agentic_insights_extracted.txt  derive_toe.py  gemini-code-1776988004264.txt  proofread_toe.py  review_whitepaper.py  rewrite_whitepaper.py  toe_derivation_state.json
python_env/: Omega_Control_Panel.py  deds_orchestrator.py  deds_state.json  mcp_memory_server.py  mcp_server.py  omega_orchestrator.py  phone_text_engine.py
python_env/LTM/: README.md  extract_learnings.py  gemini_automation.ahk  init_vector_db.py  leakage_gate.py  ltm_cli.py  memory_management.py  memory_refiner.py  migrate_to_qdrant.py  milvus_memory.py  omega_tensor.py  process_memories.py  qdrant_memory.py
python_env/agent_zero/: README.md  __init__.py  afds_prototype.py  agent.py  batch_harvest.py  benchmark_afds.py  dork_engine.py  llm_router.py  market_demand_scraper.py  orchestrator.py  regime_manager.py  sandbox_experimenter.py  serc.py  tokamak_combat.py  train_cross_domain.py  trainer.py  universal_arena.py
python_env/biology/: OMEGA_EVO_SIM_V3.1.html  co_evolution_loop.py  continuous_coevolution.py  evolution_predictor.py  finance_coevolution.py  predict_structure.py  research_topology.py  train_bio_topology.py  train_universal_metabolism.py
python_env/business/: ALPHA_TEASER_LUX.txt  API_CONNECTION_KEYS.env  (+16 more)
src/: Makefile  sarai_core.c
src/hft_pipeline/: CMakeLists.txt  README.md
src/hft_pipeline/include/omega/hft/: avx_evaluator.hpp  npu_scorer.hpp  prediction.hpp  ring_buffer.hpp  types.hpp  yellowstone_ingestor.hpp
src/hft_pipeline/src/: avx_evaluator.cpp  main.cpp  npu_scorer.cpp  prediction.cpp  yellowstone_ingestor.cpp
src/kernel/: CMakeLists.txt  Makefile  Makefile.anomaly  README.md  afds.c  asymmetric_wiretap.c  asymmetric_wiretap.h  boot.asm  gdt.c  idt.c  idt.h  inference.c  inference.h  interrupt.asm  isr.c  kernel.c  keyboard.c  kheap.c  kheap.h  link.ld  manifold_bridge.c  multiboot.h  npu_dispatch.c  npu_dispatch.h  omega_os_dashboard.py  oracle.c  oracle.h  oracle_test.c  pmm.c  pmm.h  self_healing_makefile.mk  serial.c  task.c  task.h  timer.c  timer.h  vmm.c  vmm.h
training_scripts/: README.md  check_models.py  omega_gravity_sim.py  train_135m_omega.py  train_135m_tokamak.py  train_distillation.py  train_mini_sarai_135m.py  train_oracle.py  train_termux_agent.py  train_tokamak_300m_elite.py  validate_rcod.py
(+4035 files in other folders)
